--- a/packages/ui/tsconfig.declaration.json
+++ b/packages/ui/tsconfig.declaration.json
@@ -43,7 +43,11 @@
     "src/**/*.tsx"
   ],
   "extends": "../../tsconfig.base.json",
-  "references": [],
+  "references": [
+    {
+      "path": "../core"
+    }
+  ],
   "exclude": [
     "./src/main.ts"
   ]
