--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "debug": "NODE_ENV=local NODE_OPTIONS='--enable-source-maps --inspect --loader tsx' node src/any.ts",
-    "dev": "NODE_ENV=development NODE_OPTIONS='--enable-source-maps --inspect' node development.mjs --watch --serve",
+    "dev": "NODE_ENV=development NODE_OPTIONS='--enable-source-maps --no-warnings' node development.mjs --serve",
     "build": "rm -rf ./dist && pnpm parse && pnpm dts && pnpm types && pnpm clean",
     "parse": "NODE_ENV=production node build.mjs",
     "dts": "tsc --declaration --emitDeclarationOnly --project tsconfig.declaration.json",
@@ -15,19 +15,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "esbuild-postcss": "0.0.4",
-    "tailwindcss": "3.3.2",
     "@akrc/esbuild-plugin-clean": "^0.1.3",
     "@microsoft/api-documenter": "^7.22.21",
     "@microsoft/api-extractor": "^7.36.0",
+    "@websublime/vitamin-theme": "workspace:*",
     "esbuild": "^0.18.6",
     "esbuild-plugin-lit-css": "^2.0.4",
+    "esbuild-postcss": "0.0.4",
     "glob": "^10.3.0",
-    "@websublime/vitamin-theme": "workspace:*"
+    "sirv": "^2.0.3",
+    "tailwindcss": "3.3.2",
+    "postcss": "8.4.24",
+    "postcss-import": "15.1.0",
+    "postcss-js": "4.0.1",
+    "postcss-nested": "6.0.1"
   },
   "dependencies": {
-    "lit": "3.0.0-pre.0",
-    "@websublime/vitamin-core": "workspace:*"
+    "@websublime/vitamin-core": "workspace:*",
+    "lit": "3.0.0-pre.0"
   },
   "keywords": [
     "components",
