--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,12 +23,13 @@
     "esbuild-plugin-lit-css": "^2.0.4",
     "esbuild-postcss": "0.0.4",
     "glob": "^10.3.0",
-    "sirv": "^2.0.3",
-    "tailwindcss": "3.3.2",
     "postcss": "8.4.24",
     "postcss-import": "15.1.0",
     "postcss-js": "4.0.1",
-    "postcss-nested": "6.0.1"
+    "postcss-nested": "6.0.1",
+    "sirv": "^2.0.3",
+    "tailwindcss": "3.3.2",
+    "fs-extra": "11.1.1"
   },
   "dependencies": {
     "@websublime/vitamin-core": "workspace:*",
