feat: ui build and dev env ready

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,6 +54,14 @@
     ".": {
       "types": "./dist/@types/index.d.ts",
       "default": "./dist/index.js"
+    },
+    "./element/icon.js": {
+      "types": "./dist/elements/icon/index.d.ts",
+      "default": "./dist/element/icon/index.js"
+    },
+    "./plugin/icon.js": {
+      "types": "./dist/elements/icon/plugin.d.ts",
+      "default": "./dist/element/icon/plugin.js"
     }
   },
   "publishConfig": {
