--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.27",
     "@storybook/addon-links": "^7.0.27",
+    "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.0.27",
     "@storybook/web-components": "^7.0.27",
     "@storybook/web-components-vite": "^7.0.27",
