--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -41,6 +41,8 @@
     "@storybook/addon-links": "^7.0.27",
     "@storybook/addon-styling": "^1.3.4",
     "@storybook/blocks": "^7.0.27",
+    "@storybook/manager-api": "^7.2.2",
+    "@storybook/theming": "^7.2.2",
     "@storybook/web-components": "^7.0.27",
     "@storybook/web-components-vite": "^7.0.27",
     "autoprefixer": "10.4.14",
