--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -16,10 +16,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "esbuild-postcss": "0.0.4",
     "@tailwindcss/nesting": "0.0.0-insiders.565cd3e",
     "autoprefixer": "10.4.14",
     "color-convert": "2.0.1",
+    "esbuild-postcss": "0.0.4",
     "fs-extra": "11.1.1",
     "postcss": "8.4.24",
     "postcss-import": "15.1.0",
@@ -34,6 +34,7 @@
     "@types/fs-extra": "11.0.1",
     "@types/node": "20.4.0",
     "@types/postcss-js": "4.0.1",
+    "@types/color-convert": "^2.0.0",
     "esbuild": "^0.18.6",
     "glob": "^10.3.0"
   },
