feat(theming): postcss build scripts

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -3,14 +3,105 @@
   "version": "0.5.0",
   "description": "Base theme for Vitamin",
   "type": "module",
+  "style": "dist/vita.min.css",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "rm -rf .dist && pnpm run \"/^css:.*/\"",
+    "css:all": "postcss src/vita.css -o ./dist/vita.min.css",
+    "css:colors:amber": "postcss src/colors/amber.css -o ./dist/colors-amber.min.css",
+    "css:colors:blue": "postcss src/colors/blue.css -o ./dist/colors-blue.min.css",
+    "css:colors:bronze": "postcss src/colors/bronze.css -o ./dist/colors-bronze.min.css",
+    "css:colors:brown": "postcss src/colors/brown.css -o ./dist/colors-brown.min.css",
+    "css:colors:crimson": "postcss src/colors/crimson.css -o ./dist/colors-crimson.min.css",
+    "css:colors:cyan": "postcss src/colors/cyan.css -o ./dist/colors-cyan.min.css",
+    "css:colors:gold": "postcss src/colors/gold.css -o ./dist/colors-gold.min.css",
+    "css:colors:grass": "postcss src/colors/grass.css -o ./dist/colors-grass.min.css",
+    "css:colors:gray": "postcss src/colors/gray.css -o ./dist/colors-gray.min.css",
+    "css:colors:green": "postcss src/colors/green.css -o ./dist/colors-green.min.css",
+    "css:colors:indigo": "postcss src/colors/indigo.css -o ./dist/colors-indigo.min.css",
+    "css:colors:lime": "postcss src/colors/lime.css -o ./dist/colors-lime.min.css",
+    "css:colors:mauve": "postcss src/colors/mauve.css -o ./dist/colors-mauve.min.css",
+    "css:colors:mint": "postcss src/colors/mint.css -o ./dist/colors-mint.min.css",
+    "css:colors:olive": "postcss src/colors/olive.css -o ./dist/colors-olive.min.css",
+    "css:colors:orange": "postcss src/colors/orange.css -o ./dist/colors-orange.min.css",
+    "css:colors:pink": "postcss src/colors/pink.css -o ./dist/colors-pink.min.css",
+    "css:colors:plum": "postcss src/colors/plum.css -o ./dist/colors-plum.min.css",
+    "css:colors:purple": "postcss src/colors/purple.css -o ./dist/colors-purple.min.css",
+    "css:colors:red": "postcss src/colors/red.css -o ./dist/colors-red.min.css",
+    "css:colors:sage": "postcss src/colors/sage.css -o ./dist/colors-sage.min.css",
+    "css:colors:sand": "postcss src/colors/sand.css -o ./dist/colors-sand.min.css",
+    "css:colors:sky": "postcss src/colors/sky.css -o ./dist/colors-sky.min.css",
+    "css:colors:slate": "postcss src/colors/slate.css -o ./dist/colors-slate.min.css",
+    "css:colors:teal": "postcss src/colors/teal.css -o ./dist/colors-teal.min.css",
+    "css:colors:tomato": "postcss src/colors/tomato.css -o ./dist/colors-tomato.min.css",
+    "css:colors:violet": "postcss src/colors/violet.css -o ./dist/colors-violet.min.css",
+    "css:colors:yellow": "postcss src/colors/yellow.css -o ./dist/colors-yellow.min.css",
+    "css:schemas:amber": "postcss src/schemas/amber.css -o ./dist/schemas-amber.min.css",
+    "css:schemas:blue": "postcss src/schemas/blue.css -o ./dist/schemas-blue.min.css",
+    "css:schemas:bronze": "postcss src/schemas/bronze.css -o ./dist/schemas-bronze.min.css",
+    "css:schemas:brown": "postcss src/schemas/brown.css -o ./dist/schemas-brown.min.css",
+    "css:schemas:crimson": "postcss src/schemas/crimson.css -o ./dist/schemas-crimson.min.css",
+    "css:schemas:cyan": "postcss src/schemas/cyan.css -o ./dist/schemas-cyan.min.css",
+    "css:schemas:gold": "postcss src/schemas/gold.css -o ./dist/schemas-gold.min.css",
+    "css:schemas:grass": "postcss src/schemas/grass.css -o ./dist/schemas-grass.min.css",
+    "css:schemas:gray": "postcss src/schemas/gray.css -o ./dist/schemas-gray.min.css",
+    "css:schemas:green": "postcss src/schemas/green.css -o ./dist/schemas-green.min.css",
+    "css:schemas:indigo": "postcss src/schemas/indigo.css -o ./dist/schemas-indigo.min.css",
+    "css:schemas:lime": "postcss src/schemas/lime.css -o ./dist/schemas-lime.min.css",
+    "css:schemas:mauve": "postcss src/schemas/mauve.css -o ./dist/schemas-mauve.min.css",
+    "css:schemas:mint": "postcss src/schemas/mint.css -o ./dist/schemas-mint.min.css",
+    "css:schemas:olive": "postcss src/schemas/olive.css -o ./dist/schemas-olive.min.css",
+    "css:schemas:orange": "postcss src/schemas/orange.css -o ./dist/schemas-orange.min.css",
+    "css:schemas:pink": "postcss src/schemas/pink.css -o ./dist/schemas-pink.min.css",
+    "css:schemas:plum": "postcss src/schemas/plum.css -o ./dist/schemas-plum.min.css",
+    "css:schemas:purple": "postcss src/schemas/purple.css -o ./dist/schemas-purple.min.css",
+    "css:schemas:red": "postcss src/schemas/red.css -o ./dist/schemas-red.min.css",
+    "css:schemas:sage": "postcss src/schemas/sage.css -o ./dist/schemas-sage.min.css",
+    "css:schemas:sand": "postcss src/schemas/sand.css -o ./dist/schemas-sand.min.css",
+    "css:schemas:sky": "postcss src/schemas/sky.css -o ./dist/schemas-sky.min.css",
+    "css:schemas:slate": "postcss src/schemas/slate.css -o ./dist/schemas-slate.min.css",
+    "css:schemas:teal": "postcss src/schemas/teal.css -o ./dist/schemas-teal.min.css",
+    "css:schemas:tomato": "postcss src/schemas/tomato.css -o ./dist/schemas-tomato.min.css",
+    "css:schemas:violet": "postcss src/schemas/violet.css -o ./dist/schemas-violet.min.css",
+    "css:schemas:yellow": "postcss src/schemas/yellow.css -o ./dist/schemas-yellow.min.css",
+    "css:themes:amber": "postcss src/themes/amber-theme.css -o ./dist/theme-amber.min.css",
+    "css:themes:blue": "postcss src/themes/blue-theme.css -o ./dist/theme-blue.min.css",
+    "css:themes:bronze": "postcss src/themes/bronze-theme.css -o ./dist/theme-bronze.min.css",
+    "css:themes:brown": "postcss src/themes/brown-theme.css -o ./dist/theme-brown.min.css",
+    "css:themes:crimson": "postcss src/themes/crimson-theme.css -o ./dist/theme-crimson.min.css",
+    "css:themes:cyan": "postcss src/themes/cyan-theme.css -o ./dist/theme-cyan.min.css",
+    "css:themes:gold": "postcss src/themes/gold-theme.css -o ./dist/theme-gold.min.css",
+    "css:themes:grass": "postcss src/themes/grass-theme.css -o ./dist/theme-grass.min.css",
+    "css:themes:gray": "postcss src/themes/gray-theme.css -o ./dist/theme-gray.min.css",
+    "css:themes:green": "postcss src/themes/green-theme.css -o ./dist/theme-green.min.css",
+    "css:themes:indigo": "postcss src/themes/indigo-theme.css -o ./dist/theme-indigo.min.css",
+    "css:themes:lime": "postcss src/themes/lime-theme.css -o ./dist/theme-lime.min.css",
+    "css:themes:mauve": "postcss src/themes/mauve-theme.css -o ./dist/theme-mauve.min.css",
+    "css:themes:mint": "postcss src/themes/mint-theme.css -o ./dist/theme-mint.min.css",
+    "css:themes:olive": "postcss src/themes/olive-theme.css -o ./dist/theme-olive.min.css",
+    "css:themes:orange": "postcss src/themes/orange-theme.css -o ./dist/theme-orange.min.css",
+    "css:themes:pink": "postcss src/themes/pink-theme.css -o ./dist/theme-pink.min.css",
+    "css:themes:plum": "postcss src/themes/plum-theme.css -o ./dist/theme-plum.min.css",
+    "css:themes:purple": "postcss src/themes/purple-theme.css -o ./dist/theme-purple.min.css",
+    "css:themes:red": "postcss src/themes/red-theme.css -o ./dist/theme-red.min.css",
+    "css:themes:sage": "postcss src/themes/sage-theme.css -o ./dist/theme-sage.min.css",
+    "css:themes:sand": "postcss src/themes/sand-theme.css -o ./dist/theme-sand.min.css",
+    "css:themes:sky": "postcss src/themes/sky-theme.css -o ./dist/theme-sky.min.css",
+    "css:themes:slate": "postcss src/themes/slate-theme.css -o ./dist/theme-slate.min.css",
+    "css:themes:teal": "postcss src/themes/teal-theme.css -o ./dist/theme-teal.min.css",
+    "css:themes:tomato": "postcss src/themes/tomato-theme.css -o ./dist/theme-tomato.min.css",
+    "css:themes:violet": "postcss src/themes/violet-theme.css -o ./dist/theme-violet.min.css",
+    "css:themes:yellow": "postcss src/themes/yellow-theme.css -o ./dist/theme-yellow.min.css",
+    "css:utils:general": "postcss src/utils/general.css -o ./dist/utils-general.min.css",
+    "css:utils:media": "postcss src/utils/media.css -o ./dist/utils-media.min.css",
+    "css:utils:normalize": "postcss src/utils/normalize.css -o ./dist/utils-normalize.min.css",
+    "css:utils:rules": "postcss src/utils/rules.css -o ./dist/utils-rules.min.css"
   },
   "devDependencies": {
+    "cssnano": "^6.0.1",
     "open-props": "^1.6.5",
     "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
     "postcss-custom-media": "^10.0.2",
     "postcss-import": "^15.1.0",
     "postcss-jit-props": "^1.0.13",
