feat(core): core functions, elements and typings

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,17 +1,25 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "useDefineForClassFields": true,
-    "module": "esnext",
-    "moduleResolution": "nodenext",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./packages",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "inlineSources": true,
+    "isolatedModules": true,
+    "lib": ["es2018", "dom", "dom.iterable"],
+    "module": "esNext",
+    "moduleResolution": "node",
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "rootDir": ".",
+    "skipLibCheck": true,
     "strict": true,
     "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "declaration": true,
-    "skipLibCheck": false,
-    "composite": true,
-    "incremental": true
+    "target": "es2018",
   },
   "references": [],
   "exclude": [
