--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint Test
+name: Lint
 
 on: pull_request
 
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    name: Lint Test
+    name: Lint Packages
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code repository
