--- a/.github/workflows/workflow-base.yml
+++ b/.github/workflows/workflow-base.yml
@@ -3,15 +3,23 @@ name: '[Workflow] Checkout, install node and pnpm'
 on: workflow_call
 
 jobs:
-  prepare:
-    name: Checkout, install node and pnpm
+  checkout:
+    name: Checkout Repository
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code repository
         uses: ./.github/workflows/workflow-checkout.yml
-
+  node:
+    name: Install NodeJs
+    runs-on: ubuntu-latest
+    needs: [checkout]
+    steps:
       - name: Install NodeJs
         uses: ./.github/workflows/workflow-node.yml
-
+  pnpm:
+    name: Checkout, install node and pnpm
+    runs-on: ubuntu-latest
+    needs: [node]
+    steps:
       - name: Install pnpm package manager
         uses: ./.github/workflows/workflow-pnpm.yml
