--- a/.github/workflows/workflow-checkout.yml
+++ b/.github/workflows/workflow-checkout.yml
@@ -13,7 +13,6 @@ jobs:
     name: Checkout Repository
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: ${{ github.event.inputs.depth }}
