--- a/.github/workflows/workflow-base.yml
+++ b/.github/workflows/workflow-base.yml
@@ -7,19 +7,16 @@ jobs:
     name: Checkout Repository
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code repository
-        uses: websublime/vitamin/.github/workflows/workflow-checkout.yml@feature/reusable-actions
+      - uses: ./.github/workflows/workflow-checkout.yml@feature/reusable-actions
   node:
     name: Install NodeJs
     runs-on: ubuntu-latest
     needs: [checkout]
     steps:
-      - name: Install NodeJs
-        uses: ./.github/workflows/workflow-node.yml
+      - uses: ./.github/workflows/workflow-node.yml
   pnpm:
     name: Checkout, install node and pnpm
     runs-on: ubuntu-latest
     needs: [node]
     steps:
-      - name: Install pnpm package manager
-        uses: ./.github/workflows/workflow-pnpm.yml
+      - uses: ./.github/workflows/workflow-pnpm.yml
