--- a/.github/workflows/workflow-checkout.yml
+++ b/.github/workflows/workflow-checkout.yml
@@ -13,6 +13,6 @@ jobs:
     name: Checkout Repository
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout
       with:
         fetch-depth: ${{ github.event.inputs.depth }}
