--- a/.github/workflows/workflow-base.yml
+++ b/.github/workflows/workflow-base.yml
@@ -5,18 +5,12 @@ on: workflow_call
 jobs:
   checkout:
     name: Checkout Repository
-    runs-on: ubuntu-latest
-    steps:
-    - uses: ./.github/workflows/workflow-checkout.yml
+    uses: ./.github/workflows/workflow-checkout.yml
   node:
     name: Install NodeJs
-    runs-on: ubuntu-latest
     needs: [checkout]
-    steps:
-    - uses: ./.github/workflows/workflow-node.yml
+    uses: ./.github/workflows/workflow-node.yml
   pnpm:
     name: Checkout, install node and pnpm
-    runs-on: ubuntu-latest
     needs: [node]
-    steps:
-    - uses: ./.github/workflows/workflow-pnpm.yml
+    uses: ./.github/workflows/workflow-pnpm.yml
