--- a/.github/workflows/workflow-base.yml
+++ b/.github/workflows/workflow-base.yml
@@ -15,3 +15,13 @@ jobs:
     needs: [node]
     uses: ./.github/workflows/workflow-pnpm.yml
     secrets: inherit
+  build:
+    name: Build Packages
+    runs-on: ubuntu-latest
+    needs: [pnpm]
+    steps:
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build
+        run: pnpm build
