fix(actions): reusable back

--- a/.github/workflows/workflow-pnpm.yml
+++ b/.github/workflows/workflow-pnpm.yml
@@ -2,8 +2,9 @@ name: '[Workflow] Pnpm'
 
 on:
   workflow_call:
-    NPM_TOKEN:
-      required: true
+    secrets:
+      NPM_TOKEN:
+        required: true
 
 env:
   CI: true
@@ -18,7 +19,7 @@ jobs:
         run: npm i pnpm@latest -g
 
       - name: Setup npmrc
-        run: echo "//registry.npmjs.org/:_authToken=${{ NPM_TOKEN }}" > .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
 
       - name: Setup pnpm config
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
