fix(actions): reduce files

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -1,4 +1,4 @@
-name: '[Action] Build Artifact'
+name: '[Action] Build Bundle'
 
 on: pull_request
 
@@ -6,7 +6,28 @@ env:
   CI: true
 
 jobs:
-  checkout-install-build:
-    name: Prepare Environment and Build
-    uses: ./.github/workflows/workflow-base.yml
+  checkout:
+    name: Checkout Repository
+    uses: ./.github/workflows/workflow-checkout.yml
+  node:
+    name: Install NodeJs
+    needs: [checkout]
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: ./.github/workflows/workflow-node.yml
+  pnpm:
+    name: Checkout, install node and pnpm
+    needs: [node]
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: ./.github/workflows/workflow-pnpm.yml
     secrets: inherit
+  build:
+    name: Build Packages
+    needs: [pnpm]
+    permissions:
+      contents: read
+      pull-requests: write
+    uses: ./.github/workflows/workflow-build.yml
