--- a/.github/workflows/workflow-node.yml
+++ b/.github/workflows/workflow-node.yml
@@ -13,6 +13,7 @@ jobs:
     name: Install Node
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         node-version: ${{ github.event.inputs.version }}
+        cache: 'pnpm'
