--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,3 +20,5 @@ jobs:
 
       - name: Install pnpm package manager
         uses: ./.github/actions/pnpm
+        with:
+          npm-token: ${{ secrets.NPM_TOKEN }}
