--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -15,6 +15,6 @@
   "useCalculatedVersion": true,
   "snapshot": {
     "useCalculatedVersion": true,
-    "prereleaseTemplate": "SNAPSHOT-{commit}"
+    "prereleaseTemplate": "{commit}-SNAPSHOT"
   }
 }
